[package]
name = "aws-signing-request"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.0"
sha2 = "0.9.8"
hex = "0.4.3"
hex-literal = "0.3.3"
chrono = { version = "0.4.19", features =["serde"]}
hmac = "0.11.0"